# Rev-5-arbitrage-bot

./: .gitignore  CMakeLists.txt  README.md  backtest_trades.csv
config/: default.json
src/: backtester.cpp  live.cpp  paper_trader.cpp
src/cold_path/: config_loader.cpp  config_loader.hpp  file_source.cpp  file_source.hpp  logger.hpp  metrics.cpp  metrics.hpp  order_sender.cpp  order_sender.hpp  order_tracker.hpp  rest_poller.cpp  rest_poller.hpp  sim_handler.hpp
src/common/: constants.hpp  simd_helpers.hpp  time_utils.hpp  types.hpp
src/hot_path/: engine.hpp  hot_path_impl.cpp  market_state.hpp  order_builder.hpp  ring_buffer.hpp  signal_eval.hpp  virtual_ledger.hpp
tools/: fetch_historical_ticks.py  fetch_real_ticks.py  gen_mock_ticks.py  generate_charts.py  generate_mock_data.py  probe_symbols.py  record_ticks.py
